[project]
name = "bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atproto>=0.0.56",
    "click>=8.1.7",
    "keyring>=25.5.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
