[tool.poetry]
name = "uuid7"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
pytest-mypy = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
